--- a/style.css
+++ b/style.css
@@ -10,30 +10,37 @@ body {
 }
 
 .chatbot {
-  width: 600px;
+  width: 500px;
   margin: 0 auto;
   height: 90vh;
   box-shadow: 0px 0px 17px 2px rgba(0, 0, 0, 0.22);
   overflow: hidden;
+  position: relative;
 }
 
-.chatbot__window {
-  box-sizing: border-box;
-  height: 70%;
-  overflow: scroll;
-  padding: 20px 12px 12px 20px;
-}
+/***********************/
+/******* HEADER  *******/
+/***********************/
 
 .chatbot__header {
-  height: 20%;
-  background-color: #afafaf;
+  height: 25%;
+  background-image: url("https://unsplash.it/500/200?random");
+  background-size: cover;
   box-shadow: 0px 1px 2px 2px rgba(0, 0, 0, 0.20);
   position: relative;
 }
 
 /***********************/
-/***** FEED STYLES *****/
+/******** WINDOW *******/
 /***********************/
+
+.chatbot__window {
+  box-sizing: border-box;
+  max-height: 65%;
+  overflow: scroll;
+  padding: 20px 12px 12px 20px;
+}
+
 .query {
   text-align: right;
 }
@@ -62,21 +69,48 @@ body {
   border: 1px solid #5484ae;
 }
 
+.quick-reply {
+  margin: 12px 0;
+  width: 100%;
+  text-align: justify;
+}
+
+.quick-reply::after {
+  content: "";
+  width: 100%;
+  display: inline-block;
+}
+
+.quick-reply__button {
+  display: inline-block;
+  border-radius: 12px;
+  border: 1px solid #400080;
+  width: 30%;
+  text-align: center;
+  color: #400080;
+  padding: 6px 0;
+}
+
 /***********************/
-/**** INPUT STYLES *****/
+/******** INPUT ********/
 /***********************/
 
 .chatbot__input {
-  height: 46px;
+  box-sizing: border-box;
   border-top: 1px solid #d3d3d3;
-  position: relative;
+  position: absolute;
+  bottom: 0;
+  height: 60px;
+  width: 100%;
+  background-color: #FFFFFF;
 }
 
 .input__text {
   font-family: Helvetica, sans-serif;
-  padding: 12px;
+  padding-left: 12px;
   border: none;
   font-size: 16px;
+  line-height: 60px;
 }
 
 .input__button {
@@ -84,11 +118,12 @@ body {
   top: 0;
   bottom: 0;
   right: 0;
+
 }
 
 .input__mic {
   font-size: 36px;
-  line-height: 42px;
+  line-height: 60px;
   cursor: pointer;
 }
 
@@ -100,7 +135,7 @@ body {
 }
 
 /***********************/
-/**** LOADER STYLES ****/
+/******** LOADER *******/
 /***********************/
 
 .loading {
@@ -156,8 +191,12 @@ body {
 /**** MEDIA QUERIES ****/
 /***********************/
 
-@media (max-width: 600px) {
+@media (max-width: 500px) {
+  body {
+    margin: 0;
+  }
   .chatbot {
-    width: 100%;
+    width: 100vw;
+    height: 100vh;
   }
 }
