query border color

--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ strong, .card__subheading {
   background-color: #FFFFFF;
   color: #400080;
   border-radius: 12px 12px 3px 12px;
-  border: 1px solid #5484ae;
+  border: 1px solid #400080;
 }
 
 .quick-reply {
