--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ strong, .card__subheading {
 .chatbot__header {
   height: 25%;
   background-color: #cccccc; /* Fallback if no image */
-  background-image: url("https://unsplash.it/500/200?random"); /* TODO: remove after JS done */
+  /*background-image: url("https://unsplash.it/500/200?random"); /* TODO: remove after JS done */*/
   background-size: cover;
   box-shadow: 0px 1px 4px 2px rgba(0, 0, 0, 0.70);
   position: relative;
@@ -113,7 +113,7 @@ strong, .card__subheading {
   width: 100%;
   padding-top: 53%; /* TODO: See todo above. Closest approximation to achieve 1:1.9 ratio, only necessary if width is dynamic.  */
   background-color: #cccccc; /* Fallback if no image */ /* Fallback if no image */
-  background-image: url("https://unsplash.it/400/300?random"); /* TODO: remove after JS done */
+  /*background-image: url("https://unsplash.it/400/300?random"); /* TODO: remove after JS done */*/
   background-size: cover;
 }
 
