--- a/css/style.css
+++ b/css/style.css
@@ -158,7 +158,6 @@ strong, .card__subtitle {
   background-color: #400080;
 }
 
-
 /***********************/
 /******** INPUT ********/
 /***********************/
@@ -217,8 +216,12 @@ strong, .card__subtitle {
   width: 100%;
 }
 
+.error--hidden {
+  opacity: 0;
+}
+
 .error {
-  transition: all 0.25s;
+  transition: all 1s;
   margin: 0 auto;
 }
 
@@ -227,28 +230,21 @@ strong, .card__subtitle {
   color: #FFFFFF;
   padding: 6px;
   position: relative;
-  top: -15px;
+  top: -30px;
   font-weight: 100;
-}
-
-.error--visible {
-  visibility: visible;
-}
-
-.error--hidden {
-  visibility: hidden;
 }
 
 .loading {
   font-size: 0;
+  transition: all 1s;
 }
 
 .loading--visible {
-  visibility: visible;
+  opacity: 1;
 }
 
 .loading--hidden {
-  visibility: hidden;
+  opacity: 0;
 }
 
 .loading__left, .loading__middle, .loading__right {
