--- a/css/style.css
+++ b/css/style.css
@@ -128,8 +128,7 @@ strong, .card__subtitle {
 
 .card__image {
   width: 100%;
-  padding-top: 53%; /* TODO: Approximation to achieve 1:1.9 ratio, only necessary if width is dynamic. */
-  background-color: #cccccc; /* Fallback if no image */ /
+  padding-top: 53%; /* Approximation to achieve 1:1.9 ratio, only necessary if width is dynamic. */
   background-size: cover;
 }
 
