--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@ body {
   background-size: cover;
   box-shadow: 0px 1px 4px 2px rgba(0, 0, 0, 0.70);
   position: relative;
+  z-index: 1;
 }
 
 /***********************/
@@ -49,6 +50,7 @@ body {
 .response {
   position: relative;
 }
+
 .response::before {
   content: url(../assets/duolog_logo_small.png);
   opacity: 0.2;
@@ -60,11 +62,11 @@ body {
 .query, .response {
   margin: 12px;
   font-weight: 100;
+  animation: 500ms ease-in-out zoom;
 }
 
 .bubble {
   display: inline-block;
-  /*padding: 0 12px;*/
   padding: 6px 12px;
 }
 
@@ -293,6 +295,10 @@ body {
   animation-delay: 0.3s;
 }
 
+/*******************************/
+/***** ANIMATION KEYFRAMES *****/
+/*******************************/
+
 @keyframes loader {
   0% {
     transform: scale(.2);
@@ -304,6 +310,19 @@ body {
   } 100% {
     transform: scale(.2);
     opacity: 0.2;
+  }
+}
+
+@keyframes zoom {
+  0% {
+    opacity: 0;
+    transform: scale(0);
+  } 70% {
+    opacity: .7;
+    transform: scale(1.1);
+  } 100% {
+    opacity: 1;
+    transform: scale(1);
   }
 }
 
