--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,8 @@ body {
 
 .chatbot {
   background-color: #FFFFFF;
-  max-width: 400px;
+  max-width: 360px;
+  max-height: 640px;
   margin: 0 auto;
   height: 90vh;
   box-shadow: 0px 0px 17px 2px rgba(0, 0, 0, 0.22);
@@ -29,7 +30,8 @@ body {
 /***********************/
 
 .chatbot__header {
-  height: 25%;
+  height: 15%;
+  min-height: 96px;
   background-color: #cccccc; /* Fallback if no image */
   background-size: cover;
   box-shadow: 0px 1px 4px 2px rgba(0, 0, 0, 0.70);
@@ -43,7 +45,7 @@ body {
 
 .chatbot__window {
   box-sizing: border-box;
-  max-height: 65%;
+  height: 80%;
   overflow: scroll;
   padding: 20px 12px 12px 20px;
 }
@@ -56,12 +58,13 @@ body {
   position: relative;
 }
 
-.response::before {
+.card::before, .response > .bubble::before {
   content: url(../assets/duolog_logo_small.png);
   opacity: 0.2;
   position: absolute;
   left: -40px;
-  transform: scale(0.5) translateY(-50%);
+  top: 50%;
+  transform: translateY(-50%) scale(0.35);
 }
 
 .query, .response {
@@ -81,6 +84,7 @@ body {
   border-radius: 3px 12px 12px;
   text-align: left;
   border: 1px solid #400080;
+  position: relative;
 }
 
 .query .bubble {
@@ -92,7 +96,7 @@ body {
 
 .bubble__text p {
   margin: 0;
-  line-height: 2.2rem;
+  line-height: 2rem;
 }
 
 .quick-reply {
@@ -139,7 +143,7 @@ body {
   background-color: #400080;
 }
 
-.card, .video {
+.card {
   background-color: #FFFFFF;
   margin: 0 auto;
   max-width: 400px;
@@ -148,7 +152,7 @@ body {
   overflow: hidden;
 }
 
-.card__image, .video__container {
+.card__image {
   width: 100%;
   padding-top: 53%; /* Approximation to achieve 1:1.9 ratio*/
   background-size: cover;
@@ -189,6 +193,26 @@ body {
   background-color: #400080;
 }
 
+.video {
+  background-color: #FFFFFF;
+  margin: 0 auto;
+  max-width: 400px;
+  border: 1px solid #cccccc;
+  border-radius: 12px;
+  overflow: hidden;
+  padding: 0;
+}
+
+iframe {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+}
+
+.video__player {
+  border: none;
+  display: block;
+}
 /***********************/
 /******** INPUT ********/
 /***********************/
@@ -197,7 +221,7 @@ body {
   border-top: 1px solid #d3d3d3;
   position: absolute;
   bottom: 0;
-  height: 60px;
+  height: 4rem;
   width: 100%;
   background-color: #FFFFFF;
 }
@@ -206,9 +230,9 @@ body {
   font-family: Helvetica, sans-serif;
   padding-left: 12px;
   border: none;
-  font-size: 1.6rem;
+  font-size: 1.4rem;
   width: 100%;
-  line-height: 6rem;
+  line-height: 4rem;
 }
 
 .input__button {
@@ -219,8 +243,8 @@ body {
 }
 
 .input__mic, .input__send {
-  font-size: 36px;
-  line-height: 60px;
+  font-size: 3rem;
+  line-height: 4rem;
   cursor: pointer;
   transition: all 0.25s;
 }
@@ -336,7 +360,7 @@ body {
 /**** MEDIA QUERIES ****/
 /***********************/
 
-@media (max-width: 400px) {
+@media (max-width: 320px) {
   body {
     margin: 0;
   }
