--- a/css/style.css
+++ b/css/style.css
@@ -17,9 +17,8 @@ body {
 .chatbot {
   background-color: #FFFFFF;
   max-width: 360px;
-  max-height: 640px;
   margin: 0 auto;
-  height: 90vh;
+  height: 640px;
   box-shadow: 0px 0px 17px 2px rgba(0, 0, 0, 0.22);
   overflow: hidden;
   position: relative;
@@ -31,7 +30,6 @@ body {
 
 .chatbot__header {
   height: 15%;
-  min-height: 96px;
   background-color: #cccccc; /* Fallback if no image */
   background-size: cover;
   box-shadow: 0px 1px 4px 2px rgba(0, 0, 0, 0.70);
@@ -360,7 +358,7 @@ iframe {
 /**** MEDIA QUERIES ****/
 /***********************/
 
-@media (max-width: 320px) {
+@media (max-width: 360px) , (max-height: 640px) {
   body {
     margin: 0;
   }
