--- a/css/style.css
+++ b/css/style.css
@@ -5,23 +5,25 @@ html {
 body {
   font-family: Helvetica, sans-serif;
   padding: 0;
-  margin: 5vh 0;
+  margin: 0;
   font-size: 1.2rem;
 }
 
 .container {
   max-width: 960px;
-  margin: 0 auto;
+  margin: 5vh auto;
 }
 
 .chatbot {
   background-color: #FFFFFF;
-  max-width: 360px;
-  margin: 0 auto;
+  width: 360px;
   height: 640px;
   box-shadow: 0px 0px 17px 2px rgba(0, 0, 0, 0.22);
   overflow: hidden;
-  position: relative;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 /***********************/
@@ -358,10 +360,7 @@ iframe {
 /**** MEDIA QUERIES ****/
 /***********************/
 
-@media (max-width: 360px) , (max-height: 640px) {
-  body {
-    margin: 0;
-  }
+@media (max-width: 360px) {
 
   .chatbot {
     width: 100vw;
@@ -374,4 +373,10 @@ iframe {
     margin-bottom: 6px;
   }
 
+}
+
+@media (max-height: 640px) {
+  .chatbot {
+    height: 100vh;
+  }
 }
