--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,8 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
 }
 
 /***********************/
@@ -32,6 +34,7 @@ body {
   box-shadow: 0px 1px 4px 2px rgba(0, 0, 0, 0.70);
   position: relative;
   z-index: 1;
+  flex-shrink: 0;
 }
 
 .header__wrapper {
@@ -69,8 +72,9 @@ body {
 
 .window {
   box-sizing: border-box;
-  height: 80%;
-  overflow: scroll;
+  overflow-y: scroll;
+  flex-grow: 1;
+  flex-shrink: 1;
   padding: 20px 12px 12px 20px;
 }
 
@@ -243,11 +247,10 @@ iframe {
 
 .input {
   border-top: 1px solid #d3d3d3;
-  position: absolute;
-  bottom: 0;
   height: 4rem;
   width: 100%;
   background-color: #FFFFFF;
+  flex-shrink: 0;
 }
 
 .input__text {
@@ -290,8 +293,6 @@ iframe {
 
 .status {
   text-align: center;
-  position: relative;
-  top: -30px;
   width: 100%;
   font-size: 1.2rem;
 }
@@ -309,8 +310,6 @@ iframe {
   background-color: #767676;
   color: #FFFFFF;
   padding: 6px;
-  position: relative;
-  top: -30px;
   font-weight: 100;
 }
 
