--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body {
 
 .chatbot {
   background-color: #FFFFFF;
-  width: 360px;
+  width: 100%;
   height: 640px;
   -webkit-box-shadow: 0px 0px 17px 2px rgba(0, 0, 0, 0.22);
   box-shadow: 0px 0px 17px 2px rgba(0, 0, 0, 0.22);
