--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,12 @@
 html {
-  font-size: 62.5%;
+  
 }
 
 body {
   font-family: Helvetica, sans-serif;
   padding: 0;
   margin: 0;
-  font-size: 1.2rem;
+  font-size: 20px;
 }
 
 .chatbot {
@@ -69,7 +69,7 @@ body {
 
 .header__text {
   box-sizing: border-box;
-  font-size: 3rem;
+  font-size: 65px;
   line-height: 3rem;
   font-weight: 100;
   margin: 0;
@@ -122,13 +122,13 @@ body {
 
 .bubble {
   display: inline-block;
-  padding: 0 1.2rem;
+  padding: 0 60px;
 }
 
 .response .bubble {
-  background-color: #23384E;
+  background-color: #4682B4;
   color: #FFFFFF;
-  border-radius: 6px 24px 24px;
+  border-radius: 60px 24px 24px;
   text-align: left;
   border: 1px solid #23384E;
   position: relative;
@@ -136,9 +136,9 @@ body {
 
 .query .bubble {
   background-color: #FFFFFF;
-  color: #4A89BF;
-  border-radius: 24px 24px 6px 24px;
-  border: 2px solid #4A89BF;
+  color: #4682B4;
+  border-radius: 24px 24px 60px 24px;
+  border: 4px solid #4A89BF;
 }
 
 .bubble__text p {
