--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body {
   font-family: Helvetica, sans-serif;
   padding: 0;
   margin: 0;
-  font-size: 22px;
+  font-size: 18px;
 }
 
 .chatbot {
@@ -126,9 +126,11 @@ body {
 }
 
 .response .bubble {
-  background-color: #4682B4;
+  background-color: #23384E;
   color: #FFFFFF;
-  border-radius: 60px 24px 24px;
+  padding: 15px;
+   margin: 5px 10px 0;
+  border-radius: 50px 24px 24px;
   text-align: left;
   border: 1px solid #23384E;
   position: relative;
@@ -136,8 +138,10 @@ body {
 
 .query .bubble {
   background-color: #FFFFFF;
+  padding: 15px;
+  margin: 5px 10px 0;
   color: #4682B4;
-  border-radius: 24px 24px 60px 24px;
+  border-radius: 24px 24px 50px 24px;
   border: 4px solid #4A89BF;
 }
 
