--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ body {
     min-width: 30px;
     display: flex;
     flex-flow: row wrap;
-    align-items: flex-start;
+    align-items: flex-center;
     margin: 0px auto 0px auto;
     border-radius: 280px 28px 0px 0px;
    }
