--- a/css/style.css
+++ b/css/style.css
@@ -52,12 +52,12 @@ body {
     color: white;
     padding: 10px;
     width: 100%;
-    min-width: 30px;
+    min-width: 10px;
     display: flex;
     flex-flow: row wrap;
-    align-items: flex-center;
+    align-items: center;
     margin: 0px auto 0px auto;
-    border-radius: 280px 28px 0px 0px;
+    border-radius: 28px 28px 0px 0px;
    }
  
 .header__wrapper {
