--- a/css/style.css
+++ b/css/style.css
@@ -50,12 +50,12 @@ body {
 .title {
     font-size: 55px;
     color: white;
-    padding: 10px;
+    padding-left: 600px;
     width: 100%;
     min-width: 10px;
     display: flex;
     flex-flow: row wrap;
-    align-items: center;
+    align-items: flex-start;
     margin: 0px auto 0px auto;
     border-radius: 28px 28px 0px 0px;
    }
