--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,8 @@ body {
 .title {
     font-size: 55px;
     color: white;
-    padding-left: 60px;
+    padding-left: 500px;
+    padding-top: 20px;
     width: 100%;
     min-width: 30px;
     display: flex;
