--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,7 @@ body {
 }
 
 .card::before, .response>.bubble::before, .video::before {
-  content: url(../assets/headlogo.png);
+  content: url(../headlogo.png);
   opacity: 0.2;
   position: absolute;
   left: -40px;
