--- a/css/style.css
+++ b/css/style.css
@@ -142,7 +142,7 @@ body {
   color: #FFFFFF;
   padding: 10px;
    margin: 10px 10px 0;
-  border-radius: 50px 24px 24px;
+  border-radius: 20px 20px 20px 0px;
   text-align: left;
   border: 1px solid #23384E;
   position: relative;
@@ -153,7 +153,7 @@ body {
   padding: 15px;
   margin: 5px 10px 0;
   color: #4682B4;
-  border-radius: 24px 24px 50px 24px;
+  border-radius: 20px 20px 0px 20px;
   border: 4px solid #4A89BF;
 }
 
@@ -172,7 +172,7 @@ body {
   background-color: #FFFFFF;
   color: #4682B4;
   border-radius: 12px;
-  border: 1px solid #400080;
+  border: 1px solid #23384E;
   display: inline-block;
   width: 30%;
   text-align: center;
